--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "compression": "^1.7.4",
     "config": "^3.3.9",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-cors": "^0.0.3",
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
     "joi-objectid": "^4.0.2",
